[package]
name = "postman_rs"
version = "0.1.0"
authors = ["Aki <wuminzhe@gmail.com>"]
edition = "2018"

[dependencies]
config = { version = "0.10.1" }
thiserror = "1.0.22"
anyhow = "1.0.34"
reqwest = { version = "0.10", features = ["json"] }
tokio = { version = "0.2", features = ["full"] }
web3 = { git = "https://github.com/tomusdrw/rust-web3" }
regex = "1"
async-recursion = "0.3.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
dirs = "3.0.1"